force-app/main/default/objects/Lead/fields/Qualification_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Debrief__c</fullName>
    <description>Enter debrief information for qualified leads</description>
    <inlineHelpText>Enter debrief information for qualified leads</inlineHelpText>
    <label>Qualification Debrief</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>