force-app/main/default/objects/Lead/fields/Reason_Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Disqualified__c</fullName>
    <description>Pick the reason why a Lead may be Disqualified</description>
    <label>Reason Disqualified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer has explicitly requested that we stop contacting them</fullName>
            </value>
            <value>
                <fullName>Customer is an unauthorized re-seller</fullName>
            </value>
            <value>
                <fullName>Lead has no needs and therefore would never be a customer (i.e. has absolutely no need for appliances or anything else we offer)</fullName>
            </value>
            <value>
                <fullName>Bad contact information (i.e. phone and email are non-functional)</fullName>
            </value>
            <value>
                <fullName>Not a valid business partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>