force-app/main/default/objects/Lead/fields/Reason_Disqualified_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Disqualified_Description__c</fullName>
    <label>Reason Disqualified Description</label>
    <type>TextArea</type>
</CustomField>