force-app/main/default/objects/Lead/fields/Reasons_For_Not_Working_With_SC__c.field-meta.xml
<CustomField>
    <fullName>Reasons_For_Not_Working_With_SC__c</fullName>
    <description>What is the primary reason for the customer for not working with SC?</description>
    <inlineHelpText>What is the primary reason for the customer for not working with SC?</inlineHelpText>
    <label>Reasons For Not Working With SC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer is no longer in the business</fullName>
            </value>
            <value>
                <fullName>Very few/no projects in the past year</fullName>
            </value>
            <value>
                <fullName>Working with a competition</fullName>
            </value>
            <value>
                <fullName>Customer requesting no additional contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>