force-app/main/default/objects/Lead/fields/Red_flag_comments__c.field-meta.xml
<CustomField>
    <fullName>Red_flag_comments__c</fullName>
    <description>Explain red flags, if any</description>
    <inlineHelpText>Explain red flags, if any</inlineHelpText>
    <label>Red flag comments</label>
    <type>TextArea</type>
</CustomField>