force-app/main/default/objects/Lead/fields/Repair_Locations__c.field-meta.xml
<CustomField>
    <fullName>Repair_Locations__c</fullName>
    <description>Type of location where services will be rendered</description>
    <inlineHelpText>Type of location where services will be rendered</inlineHelpText>
    <label>Repair Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Homes</fullName>
            </value>
            <value>
                <fullName>Warehouses</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
            <value>
                <fullName>Apartment/Condo Units</fullName>
            </value>
            <value>
                <fullName>Military Base</fullName>
            </value>
            <value>
                <fullName>Commercial Location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>