force-app/main/default/objects/Lead/fields/Sales_Cycle_Log__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Cycle Log</label>
    <referenceTo>Sales_Cycle_Log__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>