force-app/main/default/objects/Lead/fields/Sales_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_ID_Number__c</fullName>
    <description>Identification number the retail associate enters into the cash register prior to a sale</description>
    <inlineHelpText>Identification number the retail associate enters into the cash register prior to a sale</inlineHelpText>
    <label>Sales ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>