force-app/main/default/objects/Lead/fields/Sales_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualified__c</fullName>
    <description>Counts the number of Sales Qualified Leads</description>
    <formula>IF(ISPICKVAL( Status , &quot;Sales Qualified Lead&quot;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>