force-app/main/default/objects/Lead/fields/SCO_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SCO_Account_ID__c</fullName>
    <label>SCO Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>