force-app/main/default/objects/Lead/fields/SCO_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SCO_Contact_Id__c</fullName>
    <label>SCO Contact Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>