force-app/main/default/objects/Lead/fields/SCOPES_ID__c.field-meta.xml
<CustomField>
    <fullName>SCOPES_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This field will be primarily used by Marketing.  When marketing to companies with Innactive SCOPES IDs, campaign activity will be entered as a Lead.  By contrast, campaign activity for active accounts will show on the Account record Related List.</inlineHelpText>
    <label>SCOPES ID</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>