force-app/main/default/objects/Lead/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <inlineHelpText>The first 2-digits of each NAICS code represent a company&#39;s sector. The values in the field represent all of the NAICS sector descriptions.</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Real Estate and Rental and Leasing</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry, Fishing and Hunting</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific, and Technical Services</fullName>
            </value>
            <value>
                <fullName>Management of Companies and Enterprises</fullName>
            </value>
            <value>
                <fullName>Administrative and Support and Waste Management and Remediation Services</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment, and Recreation</fullName>
            </value>
            <value>
                <fullName>Other Services (except Public Administration)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>