force-app/main/default/objects/Lead/fields/Send_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Send_Catalogue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box in order to request that a catalogue be sent to your customer contact.  This will not be sent immediately.</inlineHelpText>
    <label>Send Catalogue</label>
    <type>Checkbox</type>
</CustomField>