force-app/main/default/objects/Lead/fields/Send_eNewsletter__c.field-meta.xml
<CustomField>
    <fullName>Send_eNewsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if your customer contact should be added to the Sears Commercial eNewsletter distribution list.  Uncheck this box if your customer contact requests to be removed from the Sears Commercial eNewsletter distribution list.</inlineHelpText>
    <label>Send eNewsletter</label>
    <type>Checkbox</type>
</CustomField>