force-app/main/default/objects/Lead/fields/Service_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Service_Payment_Method__c</fullName>
    <description>Displays the intended method of payment for services rendered</description>
    <inlineHelpText>Displays the intended method of payment for services rendered</inlineHelpText>
    <label>Service Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Monthly Invoices</fullName>
            </value>
            <value>
                <fullName>Credit Card/Commercial One Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>