force-app/main/default/objects/Lead/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Haul-Away</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>