force-app/main/default/objects/Lead/fields/SHC_Segment__c.field-meta.xml
<CustomField>
    <fullName>SHC_Segment__c</fullName>
    <label>SHC Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Best Western</fullName>
            </value>
            <value>
                <fullName>Builder Radio</fullName>
            </value>
            <value>
                <fullName>Building, Remodeling, Moving (BRM)</fullName>
            </value>
            <value>
                <fullName>Commercial Marketplace</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Employee Purchase Plan</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Home Inspection Services</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>HUD</fullName>
            </value>
            <value>
                <fullName>Insurance Replacement</fullName>
            </value>
            <value>
                <fullName>Manufactured Housing</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>One Time Buy</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Realty</fullName>
            </value>
            <value>
                <fullName>Remodeling</fullName>
            </value>
            <value>
                <fullName>Rent-to-own</fullName>
            </value>
            <value>
                <fullName>SHIP (Sears Home Improvement)</fullName>
            </value>
            <value>
                <fullName>Single Family</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Weatherization</fullName>
            </value>
            <value>
                <fullName>Alliance</fullName>
            </value>
            <value>
                <fullName>Apartment Complexes</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Home Warranty</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>