force-app/main/default/objects/Lead/fields/Shop_Repair_Service_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Shop_Repair_Service_Quantity__c</fullName>
    <description>Displays the total number of products to be serviced in a repair shop</description>
    <inlineHelpText>Displays the total number of products to be serviced in a repair shop</inlineHelpText>
    <label>Shop Repair Service Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>