force-app/main/default/objects/Lead/fields/SIC_1__c.field-meta.xml
<CustomField>
    <fullName>SIC_1__c</fullName>
    <label>SIC 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>