force-app/main/default/objects/Lead/fields/SIC_2__c.field-meta.xml
<CustomField>
    <fullName>SIC_2__c</fullName>
    <label>SIC 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>