force-app/main/default/objects/Lead/fields/Speaking_with_someone_with_influence__c.field-meta.xml
<CustomField>
    <fullName>Speaking_with_someone_with_influence__c</fullName>
    <description>Qualification Criteria - Are we speaking with someone with influence or power?</description>
    <inlineHelpText>Qualification Criteria - Are we speaking with someone with influence or power?</inlineHelpText>
    <label>Speaking with someone with influence?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>