force-app/main/default/objects/Lead/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store #</label>
    <length>4</length>
    <type>Text</type>
</CustomField>