force-app/main/default/objects/Lead/fields/Store_Associate_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Associate_Name__c</fullName>
    <inlineHelpText>Given name as on check</inlineHelpText>
    <label>Store Associate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>