force-app/main/default/objects/Lead/fields/Store_Associates_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Store_Associates_Email_Address__c</fullName>
    <label>Store Associates Email Address</label>
    <type>Email</type>
</CustomField>