force-app/main/default/objects/Lead/fields/Store_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_ID_Number__c</fullName>
    <label>Store ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>