force-app/main/default/objects/Lead/fields/Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Task_Subject__c</fullName>
    <description>Pull in Task Subject to Lead</description>
    <label>Task_Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>