force-app/main/default/objects/Lead/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <description>Pull in task type on a lead</description>
    <label>Task_Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>