force-app/main/default/objects/Lead/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt__c</fullName>
    <label>Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>