force-app/main/default/objects/Lead/fields/Telesales_Owned__c.field-meta.xml
<CustomField>
    <fullName>Telesales_Owned__c</fullName>
    <description>WFR:  Hidden field that shows the Original Lead Owner as Telesales Team</description>
    <inlineHelpText>Hidden field that shows the Original Lead Owner as Telesales Team</inlineHelpText>
    <label>Telesales Owned</label>
    <length>40</length>
    <type>Text</type>
</CustomField>