force-app/main/default/objects/Lead/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you are submitting a lead to be assigned to someone else, please enter your name as the User lead source.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>