force-app/main/default/objects/Lead/fields/User_Email_Prefix__c.field-meta.xml
<CustomField>
    <fullName>User_Email_Prefix__c</fullName>
    <label>User Email Prefix</label>
    <length>18</length>
    <type>Text</type>
</CustomField>