force-app/main/default/objects/Lead/fields/User_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Last_Name__c</fullName>
    <label>User Last Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>