force-app/main/default/objects/Lead/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <label>User Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>