force-app/main/default/objects/Lead/fields/What_brand_of_appliances_are_you_using__c.field-meta.xml
<CustomField>
    <fullName>What_brand_of_appliances_are_you_using__c</fullName>
    <label>What brand of appliances are you using</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kenmore</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>Whirlpool</fullName>
            </value>
            <value>
                <fullName>Frigidaire</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>Maytag</fullName>
            </value>
            <value>
                <fullName>Kitchen Aid</fullName>
            </value>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>Electrolux</fullName>
            </value>
            <value>
                <fullName>JennAir</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Do not have a regularly used brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>