force-app/main/default/objects/Lead/fields/What_is_convenient_time_to_reach_you__c.field-meta.xml
<CustomField>
    <fullName>What_is_convenient_time_to_reach_you__c</fullName>
    <label>What is convenient time to reach you?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>During Business Hours</fullName>
            </value>
            <value>
                <fullName>8 AM to 12 PM</fullName>
            </value>
            <value>
                <fullName>12 PM to 4 PM</fullName>
            </value>
            <value>
                <fullName>4 PM to 8 PM</fullName>
            </value>
            <value>
                <fullName>No Information Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>